# ISRC-Catalog-Manager

./: .gitignore  AGENTS.md  ISRCManager.spec  ISRC_manager.py  ISRC_manager_rev50.py  ISRC_manager_rev51.py  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  app_logo.icns  build.py  icon_factory.py  license.md  pyproject.toml  requirements.txt  sitecustomize.py
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crash_report.yml
.github/workflows/: ci.yml  help-docs-refresh.yml  release-build.yml  version-bump.yml
HTML license template/: License Template.html  README.md
artifacts/ui_pq/: deviations.csv  diagnostics-restore-target.db  evidence.json  summary.md  traceability_matrix.csv  ui_inventory.json
artifacts/ui_pq_debug/: deviations.csv  diagnostics-restore-target.db  evidence.json  summary.md  traceability_matrix.csv  ui_inventory.json
build_assets/icons/: app_logo.icns
demo/: README.md  __init__.py  build_demo_workspace.py  capture_demo_screenshots.py
docs/: README.md  audio-authenticity-workflow.md  catalog-workspace-workflows.md  code-registry-workflows.md  contract-template-workflows.md  diagnostics-and-recovery.md  file_storage_modes.md  gs1_workflow.md  import-and-merge-workflows.md  media-player.md  modularization_strategy.md  release-builds.md  repertoire_knowledge_system.md  reporting.md  security-release-governance.md  template-conversion-workflow.md  theme_builder.md  undo_redo_strategy.md
docs/change control/: Milestones.md
docs/implementation_handoffs/: add-track-edit-media-smart-budget-handoff.md  advanced-qss-styling-fix-and-template-expansion.md  album-art-master-slave-reference-guard.md  application-wide-storage-admin-and-final-cleanup.md  audio-attach-asset-version-linkage.md  audio-conversion-derivative-pipeline.md  audio-conversion-lossy-managed-followup.md  audio-export-progress-dialog-wiring.md  audio-preview-full-media-control-expansion.md  audio-preview-layout-theming-and-macos-window-followup.md  audio-preview-responsive-layout-followup.md  audio-watermark-and-authenticity-strategy.md  audio-watermark-format-scope-followup.md  automatic-audio-export-metadata-embedding.md  backlog-unified-implementation-strategy.md  bandcamp-promo-code-ledger.md  build-py-robustness-alignment.md  build-pyinstaller-venv-discovery-handoff.md  bundled-html-license-template-example.md  catalog-menu-context-menu-dialog-cleanup.md  catalog-refresh-blob-badge-performance-and-visibility-followup.md  catalog-reset-filter-ui-freeze-fix.md  catalog-workspace-menu-regroup-only.md  catalog-workspace-ui-followup.md  central-code-registry-workspace-and-integration.md  ci-test-suite-decomposition.md  contract-template-placeholder-masterplan.md  contract-template-placeholder-phase-0.md  contract-template-placeholder-phase-1.md  contract-template-placeholder-phase-2.md  contract-template-placeholder-phase-3.md  contract-template-placeholder-phase-4.md  contract-template-placeholder-phase-5.md  contract-template-placeholder-phase-6.md  contract-template-workspace-docking-redesign.md  contract-template-workspace-final-bug-fix.md  contract-template-workspace-root-cause-bug-fix.md  cross-platform-github-release-builds.md  csv-import-column-parsing-fix.md  csv-import-delimiter-selection.md  (+76 more)
docs/integrations/: soundcloud-publishing.md
docs/invoicing/: Invoice_Workspace_Ledger_Backend.md
docs/releases/: latest.json  v3.10.0.md  v3.10.1.md  v3.11.0.md  v3.11.1.md  v3.11.2.md  v3.11.3.md  v3.11.4.md  v3.11.5.md  v3.11.6.md  v3.11.7.md  v3.11.8.md  v3.12.0.md  v3.12.1.md  v3.12.2.md  v3.13.0.md  v3.13.1.md  v3.14.0.md  v3.14.1.md  v3.14.2.md  v3.14.3.md  v3.14.4.md  v3.14.5.md  v3.14.6.md  v3.14.7.md  v3.14.8.md  v3.15.0.md  v3.15.1.md  v3.15.2.md  v3.16.0.md  v3.16.1.md  v3.16.2.md  v3.16.3.md  v3.16.4.md  v3.16.5.md  v3.16.6.md  v3.2.0.md  v3.3.0.md  v3.3.1.md  v3.3.2.md  (+74 more)
docs/testing/: Python_3_14_4_Coverage_Progression_Handoff.md  (+3 more)
isrc_manager/: __init__.py  action_ribbon.py  app_bootstrap.py  app_dialogs.py  app_logging.py  app_prompts.py  app_services.py  app_sound_controller.py  app_sounds.py  application_settings_dialog.py  application_settings_gs1.py  application_settings_theme.py  blob_icons.py  catalog_managers.py  catalog_workspace.py  constants.py  diagnostics_progress.py  draggable_label.py  external_launch.py  file_storage.py  gs1_dialog.py  help_content.py  history_retention_controller.py  import_review_dialog.py  isrc_registry.py  isrc_registry_controller.py  main_window.py  main_window_layout.py  main_window_shell.py  packaged_smoke.py  paths.py  profile_session.py  qss_autocomplete.py  qss_reference.py  selection_scope.py  settings.py  settings_controller.py  starter_themes.py  startup_progress.py  startup_splash.py  (+14 more)
resources/: reporting.json
scripts/: configure_github_reporting.py  release_automation.py  smoke_packaged_app.py  sync_version_docs.py  update_qa_pq_history.py
tests/: __init__.py  _authenticity_support.py  _external_launch_probe.py  _legacy_profile_builders.py  ci_groups.py  qt_test_helpers.py  run_group.py  run_module.py  sitecustomize.py  test_album_entry_dialog.py  test_album_ordering_dialog.py  test_app_bootstrap.py  test_app_dialogs.py  test_app_logging.py  test_app_prompts.py  test_app_shell_integration.py  test_app_sound_controller.py  test_application_settings_dialog_behaviors.py  test_application_settings_gs1.py  test_assets_service.py  test_audio_conversion_pipeline.py  test_audio_conversion_service_unit.py  test_audio_watermark_service.py  test_authenticity_availability.py  test_authenticity_controller.py  test_authenticity_dialogs.py  test_authenticity_init.py  test_authenticity_manifest.py  test_authenticity_manifest_service.py  test_authenticity_verification_service.py  test_background_app_services.py  test_blob_icons.py  test_build_requirements.py  test_bulk_edit_helpers.py  test_catalog_admin_service.py  test_catalog_managers.py  test_catalog_read_service.py  test_catalog_table_controller.py  test_catalog_table_header_zoom.py  test_catalog_table_media_routing.py  (+149 more)
(+497 files in other folders)
