[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "isrc-catalog-manager"
version = "3.12.2"
description = "Desktop ISRC catalog manager for tracks, metadata, licensing, and exports."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "M. van de Kleut" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "PySide6==6.11.0",
  "audioread==3.1.0",
  "pillow==12.2.0",
  "openpyxl==3.1.5",
  "mutagen==1.47.0",
  "numpy==2.2.6; python_version < '3.14'",
  "numpy==2.3.2; python_version >= '3.14'",
  "soundfile==0.13.1",
  "scipy==1.15.3; python_version < '3.14'",
  "scipy==1.17.1; python_version >= '3.14'",
  "cryptography==47.0.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller==6.20.0",
]
dev = [
  "black==25.12.0",
  "coverage[toml]==7.13.5",
  "mypy==1.20.2",
  "ruff==0.15.12",
]
security = [
  "pip-audit==2.10.0",
]

[project.gui-scripts]
isrc-manager = "ISRC_manager:main"

[tool.setuptools]
py-modules = ["ISRC_manager"]
packages = [
  "isrc_manager",
  "isrc_manager.authenticity",
  "isrc_manager.assets",
  "isrc_manager.catalog_table",
  "isrc_manager.code_registry",
  "isrc_manager.contracts",
  "isrc_manager.contract_templates",
  "isrc_manager.conversion",
  "isrc_manager.conversion.adapters",
  "isrc_manager.domain",
  "isrc_manager.exchange",
  "isrc_manager.forensics",
  "isrc_manager.history",
  "isrc_manager.media",
  "isrc_manager.parties",
  "isrc_manager.promo_codes",
  "isrc_manager.quality",
  "isrc_manager.releases",
  "isrc_manager.rights",
  "isrc_manager.search",
  "isrc_manager.services",
  "isrc_manager.tags",
  "isrc_manager.tasks",
  "isrc_manager.works",
]

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
(
  ^/ISRC_manager\.py
| ^/icon_factory\.py
| ^/demo/
| ^/shibokensupport/
| ^/signature_bootstrap\.py
| ^/pyscript$
)
'''

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "ISRC_manager.py",
  "icon_factory.py",
  "demo",
  "shibokensupport",
  "signature_bootstrap.py",
  "pyscript",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.10"
files = [
  "isrc_manager/constants.py",
  "isrc_manager/domain/codes.py",
  "isrc_manager/domain/standard_fields.py",
  "isrc_manager/domain/timecode.py",
  "isrc_manager/exchange/models.py",
  "isrc_manager/isrc_registry.py",
  "isrc_manager/quality/models.py",
  "isrc_manager/releases/models.py",
  "isrc_manager/services/bulk_edit.py",
  "isrc_manager/services/catalog_admin.py",
  "isrc_manager/services/catalog_reads.py",
  "isrc_manager/services/database_admin.py",
  "isrc_manager/services/db_access.py",
  "isrc_manager/services/gs1_repository.py",
  "isrc_manager/services/gs1_settings.py",
  "isrc_manager/services/gs1_validation.py",
  "isrc_manager/services/profiles.py",
  "isrc_manager/services/session.py",
  "isrc_manager/services/settings_mutations.py",
  "isrc_manager/services/settings_reads.py",
  "isrc_manager/services/sqlite_utils.py",
  "isrc_manager/services/update_preferences.py",
  "isrc_manager/tags/models.py",
  "isrc_manager/tasks/models.py",
  "isrc_manager/update_checker.py",
  "isrc_manager/update_installer.py",
  "isrc_manager/updater_helper.py",
  "isrc_manager/version.py",
  "isrc_manager/versioning.py",
]
follow_imports = "skip"
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.coverage.run]
source = ["isrc_manager"]
omit = [
  "isrc_manager/app_dialogs.py",
  "isrc_manager/assets/dialogs.py",
  "isrc_manager/contracts/dialogs.py",
  "isrc_manager/parties/dialogs.py",
  "isrc_manager/gs1_dialog.py",
  "isrc_manager/history/dialogs.py",
  "isrc_manager/rights/dialogs.py",
  "isrc_manager/tags/dialogs.py",
  "isrc_manager/tasks/history_helpers.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"
