[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "isrc-catalog-manager"
version = "6.1.1"
description = "Desktop ISRC catalog manager for tracks, metadata, licensing, and exports."
readme = "README.md"
requires-python = ">=3.14.4"
authors = [
  { name = "M. van de Kleut" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "PySide6==6.11.1",
  "audioread==3.1.0",
  "pillow==12.2.0",
  "openpyxl==3.1.5",
  "mutagen==1.47.0",
  "numpy==2.4.6",
  "soundfile==0.14.0",
  "scipy==1.17.1",
  "cryptography==49.0.0",
  "keyring==25.7.0",
  "sqlcipher3==0.6.2",
]

[project.optional-dependencies]
build = [
  "pyinstaller==6.21.0",
]
dev = [
  "black==26.5.1",
  "coverage[toml]==7.14.1",
  "pytest==9.1.0",
  "pytest-cov==7.1.0",
  "mypy==2.1.0",
  "ruff==0.15.15",
]
security = [
  "pip-audit==2.10.0",
  "idna>=3.15",
  "urllib3>=2.7.0",
]

[project.gui-scripts]
isrc-manager = "ISRC_manager:main"

[tool.setuptools]
py-modules = ["ISRC_manager"]
packages = [
  "isrc_manager",
  "isrc_manager.authenticity",
  "isrc_manager.assets",
  "isrc_manager.catalog_table",
  "isrc_manager.code_registry",
  "isrc_manager.contracts",
  "isrc_manager.contract_templates",
  "isrc_manager.conversion",
  "isrc_manager.conversion.adapters",
  "isrc_manager.custom_fields",
  "isrc_manager.diagnostics",
  "isrc_manager.domain",
  "isrc_manager.exchange",
  "isrc_manager.integrations",
  "isrc_manager.integrations.soundcloud",
  "isrc_manager.forensics",
  "isrc_manager.history",
  "isrc_manager.invoicing",
  "isrc_manager.media",
  "isrc_manager.parties",
  "isrc_manager.promo_codes",
  "isrc_manager.quality",
  "isrc_manager.qa",
  "isrc_manager.reporting",
  "isrc_manager.releases",
  "isrc_manager.rights",
  "isrc_manager.search",
  "isrc_manager.services",
  "isrc_manager.tags",
  "isrc_manager.tasks",
  "isrc_manager.tracks",
  "isrc_manager.works",
]

[tool.black]
line-length = 100
target-version = ["py314"]
extend-exclude = '''
(
  ^/ISRC_manager\.py
| ^/icon_factory\.py
| ^/demo/
| ^/shibokensupport/
| ^/signature_bootstrap\.py
| ^/pyscript$
)
'''

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
  "ISRC_manager.py",
  "icon_factory.py",
  "demo",
  "shibokensupport",
  "signature_bootstrap.py",
  "pyscript",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.14"
files = [
  "isrc_manager/assets/models.py",
  "isrc_manager/constants.py",
  "isrc_manager/contracts/models.py",
  "isrc_manager/domain/codes.py",
  "isrc_manager/domain/repertoire.py",
  "isrc_manager/domain/standard_fields.py",
  "isrc_manager/domain/timecode.py",
  "isrc_manager/exchange/models.py",
  "isrc_manager/forensics/models.py",
  "isrc_manager/isrc_registry.py",
  "isrc_manager/parties/models.py",
  "isrc_manager/promo_codes/models.py",
  "isrc_manager/quality/models.py",
  "isrc_manager/releases/models.py",
  "isrc_manager/rights/models.py",
  "isrc_manager/search/models.py",
  "isrc_manager/integrations/soundcloud/client.py",
  "isrc_manager/integrations/soundcloud/execution.py",
  "isrc_manager/integrations/soundcloud/media.py",
  "isrc_manager/integrations/soundcloud/models.py",
  "isrc_manager/integrations/soundcloud/oauth.py",
  "isrc_manager/integrations/soundcloud/persistence.py",
  "isrc_manager/integrations/soundcloud/service.py",
  "isrc_manager/integrations/soundcloud/token_store.py",
  "isrc_manager/integrations/soundcloud/token_storage.py",
  "isrc_manager/services/bulk_edit.py",
  "isrc_manager/services/catalog_admin.py",
  "isrc_manager/services/catalog_reads.py",
  "isrc_manager/services/database_admin.py",
  "isrc_manager/services/database_security.py",
  "isrc_manager/services/db_access.py",
  "isrc_manager/services/gs1_models.py",
  "isrc_manager/services/gs1_repository.py",
  "isrc_manager/services/gs1_settings.py",
  "isrc_manager/services/gs1_validation.py",
  "isrc_manager/services/profiles.py",
  "isrc_manager/services/session.py",
  "isrc_manager/services/settings_mutations.py",
  "isrc_manager/services/settings_reads.py",
  "isrc_manager/services/sqlite_utils.py",
  "isrc_manager/services/track_artist_sql.py",
  "isrc_manager/services/update_preferences.py",
  "isrc_manager/tags/models.py",
  "isrc_manager/tasks/models.py",
  "isrc_manager/update_checker.py",
  "isrc_manager/update_installer.py",
  "isrc_manager/updater_helper.py",
  "isrc_manager/version.py",
  "isrc_manager/versioning.py",
  "isrc_manager/works/models.py",
]
follow_imports = "skip"
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.coverage.run]
source = ["isrc_manager"]
branch = true
omit = [
  "isrc_manager/app_dialogs.py",
  "isrc_manager/assets/dialogs.py",
  "isrc_manager/contracts/dialogs.py",
  "isrc_manager/parties/dialogs.py",
  "isrc_manager/gs1_dialog.py",
  "isrc_manager/history/dialogs.py",
  "isrc_manager/qa/*",
  "isrc_manager/rights/dialogs.py",
  "isrc_manager/tags/dialogs.py",
  "isrc_manager/tasks/history_helpers.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
addopts = [
  "--cov=isrc_manager",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-fail-under=90",
  "-q",
]
markers = [
  "ui_pq: engineering UI process/performance qualification suite",
]
